# example-actions

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: windows.yml
